# UnderdogCowboy_fork

./: .env  .gitignore  .python-version  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  setup.py  test.py  test_change.py  uccli
.tours/: initial-config.tour  keyring.tour  one-more.tour  specialized-agent-tour.tour  test-tour.tour  test_llm.tour  user-agent-tour.tour
apps/ui_agent_manager/: package-lock.json  package.json
docs/: tracing configuration.md  tutorial_prompt.md
docs/dev prompts/: base prompt.md
docs/doc scripts/: codetour file references.py
examples/: example_JSONExtractor.ipynb  example_LLMConfigManager.ipynb  example_agentCompressor.ipynb  example_agentLoader.ipynb  example_agent_leftoff.ipynb  example_agentchecker.ipynb  example_base_idea_poke.ipynb  example_concept_DSL.ipynb  example_gitbookdoc.ipynb  example_linked_post.ipynb  example_screentext_narative.ipynb  example_simple_intervention.ipynb  example_systemmessage.ipynb  example_test.py  example_tour_pars.ipynb  example_typesetter.ipynb  example_user_defined_agents.ipynb  extractor_diff.txt  test_bug_modelsconfig.py  test_dialogManager.ipynb  tour.json
examples/configs/: basic_config_settings.ipynb
examples/script_explorations/: gitbookdocumenting.py
scripts/: build_copy_react.sh
tests/: poke.py  tracing_config.py
tui_agent_clarity_03/: test rene.json
underdogcowboy/: __init__.py  main.py  run_timeline_editor.py  sample.tour  test_git.py  traverse.py  ui_components_registry.py
underdogcowboy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
underdogcowboy/agents/: compress_tester.json  new_language.json
underdogcowboy/agents/assessment_agents/: assessment_tester.json
underdogcowboy/agents/commit_agents/: type_maker.json
underdogcowboy/agents/meta/: agentclarity.json  assessmentbuilder.json
underdogcowboy/agents/newsagents/: commit_promo.json
underdogcowboy/core/: agent.py  bck_dialog_manager.py  config_manager.py  dialog_manager.py  exceptions.py  extractor.py  game_logic.py  intervention.py  json_storage.py  llm_config.py  llm_response_markdown.py  markdown_pre_processor.py  model.py  models.py  response.py  specialized_agents.py  test_models.py  test_smith.py  timeline_editor.py  tracing.py  uc_agent_communicator.py
underdogcowboy/core/commandtools/: agent_clarity.py  agent_clarity_02.py  agent_llm_handler.py  agent_pdf.py  assessment_agent_builder.py  basic_css.css  llm_config.py  modular.py  poke.py  state_machine_app.css  test_lib.py  tracing_config.py  tui_agent_clarity.py  tui_agent_clarity_02.py  tui_agent_clarity_03.py  tui_basic_css.py  tui_test_indicator.py  tui_test_indicator_02.py  tui_test_indicator_03.py
underdogcowboy/core/commandtools/agent_clarity/: agent_llm_handler.py  main.py  session_manager.py  state_machine_app.css
underdogcowboy/core/commandtools/agent_flow/: .mdformat.toml  agent_llm_handler.py  config.yaml  copy_paste.py  exceptions.py  llm_call_manager.py  llm_manager.py  llm_manager_candidate.py  llm_response_markdown_renderer.py  main.py  screen_config.json  select_03.py  session_initializer.py  session_manager.py  state_machine_app.css  state_machine_app_candidate.tcss  ui_factory.py  v01_octa_state_machine_app_candidate.tcss  v02_octa_state_machine_app_candidate.tcss
underdogcowboy/core/interactive_storage_layer/: github.py  queue.py
underdogcowboy/core/rag/concept_dev/: basic_idea.py  comm_assistant.ipynb  rag.ipynb  (+1 more)
underdogcowboy/core/specializedagents/: assessment_tester.py  commit_promo_agent.py  compress_agent.py  type_setter_agent.py
underdogcowboy/core/tools/: agent2pdf.py  dumpjson_systemmessage.py  git_search.py  git_search_log.py  git_search_md.py  jsonformatter.py  pdf_generator.py  work_session_tools.py
underdogcowboy/flask_apps/agent_manager/: __init__.py  app.py
underdogcowboy/tests/: test_agent_pdf.py  test_models.py  test_pre_processor.py
underdogcowboy/utils/: d_reactive.py  urlcontent2file.py
(+102 files in other folders)
